css/index.css
@charset "UTF-8";

* {
    /*box-sizing: inherit;*/
}

.big-container {
    box-sizing: border-box;
    width: 98%;
    margin: 0 auto;
    min-height: 570px;
    z-index:10;
    position: relative;
    border-radius: 10px;
    border-width: 3px;
    border-color: var(--border-color);
    border-style: none;
    background-color: var(--bg-primary);
}

.headpic{
    width:100%;
    height:540px;
    position: fixed;
    z-index: -1;
}

.headpic-cover{
    width: 100%;
    height: 540px;
}
.article {
    box-sizing: border-box;
    width: 1152px;
    margin: 60px auto 10px auto;
    display: block;
    overflow: hidden;
}

.result-box {
    width: 755px;
    margin: 0 auto;
    overflow: visible;
    padding-bottom: 5px;
}

.info-container {
    float: left;
    width: 362px;
    color: #666666;
    background-color: #ffffff;
    box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    -moz-box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    margin: 15px 5px 0 5px;
    box-sizing: border-box;
    overflow: hidden;
    padding-bottom: 10px;
    transition: ease-in-out 0.3s;
}

.info-container:hover {
    box-shadow: 0 0 10px #7e8795;
    -moz-box-shadow: 0 0 10px #7e8795;
    color: #3aa4ff;
}

.gradient-text {
    background-image: -webkit-linear-gradient(bottom, #007aff, #3aa4ff, #00b7ee);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.person-intro-title {
    height: 40px;
    line-height: 40px;
    width: 82%;
    margin: 10px 9%;
    color: #292929;
}

.person-intro-detail {
    /*height: 30px;*/
    line-height: 30px;
    width: 82%;
    margin: 8px 9%;
    padding: 0;
    color: #666666;
}

.person-intro-detail a {
    color: #0e90d2;
    text-decoration: underline #0e90d2;
}

.person-img-li {
    position: relative;
    margin: 15px 9%;
    height: 90px;
    width: 82%;
}

#person-img {
    max-height: 90px;
    max-width: 90px;
    border-radius: 50%;
    overflow: hidden;
    -webkit-transition: -webkit-transform 2s ease-out;
    -moz-transition: -moz-transform 2s ease-out;
    -o-transition: -o-transform 2s ease-out;
    -ms-transition: -ms-transform 2s ease-out;
}

#person-img:hover {
    -webkit-transform: rotateZ(360deg);
    -moz-transform: rotateZ(360deg);
    -o-transform: rotateZ(360deg);
    -ms-transform: rotateZ(360deg);
    transform: rotateZ(360deg);
}

.left-holder {
    width: 755px;
    float: left;
    margin: 0;
    overflow: visible;
    padding-bottom: 5px;
}

.right-holder {
    width: 372px;
    float: left;
    margin-left: 15px;
    margin-bottom: 10px;
    overflow: visible;
}

.article-box {
    float: left;
    width: 745px;
    height: auto;
    margin-left: 10px;
    margin-top: 20px;
    background-color: #ffffff;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    -moz-box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    overflow: hidden;
    transition: all 0.6s;
}

.choosen-box {
    width:25px;
    height:32px;
    background-color:rgb(180, 180, 180);
    margin: 0 auto;
    float:left;
    text-align:center;
    font-size:20px;
    border-radius: 4px;
    box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    -moz-box-shadow: 0 0 10px rgba(184, 197, 214, .5);
    overflow: hidden;
    transition: all 0.6s;
}

.article-box:hover {
    box-shadow: 0 0 10px #767676;
    transform: scale(1.02);
}

.choosen-box:hover {
    box-shadow: 0 0 10px #767676;
    transform: scale(1.15); 
}

.ab-content {
    width: 100%;
    margin: auto 0;
    overflow: hidden;
}

.ab-content .empty-box {
    height: 100%;
    width: 250px;
    margin: 0 auto;
}

.empty-box .svg-box {
    height: 150px;
    width: 100%;
    margin-top: 20px;
}

.empty-box .tip {
    width: 100%;
    height: 50px;
    line-height: 50px;
    font-size: 18px;
    margin-top: 10px;
    color: #666666;
}

.ab-content svg {
    background-size: 100% 100%;
    background-repeat: no-repeat;
    height: 150px;
    width: 150px;
}

.article-title {
    width: 390px;
    height: 40px;
    line-height: 40px;
    margin-top: 5px;
    margin-left: 20px;
    float: left;
}

.article-title a {
    width: 100%;
    height: 100%;
    font-size: 20px;
    color: #292929;
    font-weight: normal;
    display: inline-block;
    transition: all 0.3s ease-in-out;
    overflow: hidden; /*超出部分隐藏*/
    text-overflow: ellipsis; /* 超出部分显示省略号 */
    white-space: nowrap; /*规定段落中的文本不进行换行 */
}

.article-title a:hover {
    color: #007aff;
}

.article-img-box {
    float: left;
    width: 320px;
    height: 180px;
    margin: 0;
    overflow: hidden;
    display: block;
    /*border-radius: 10px;*/
}

.article-img-box .article-img {
    display: inline-block;
    /*height: auto;*/
    width: 100%;
    transition: all 0.6s;
}

.article-img-box img:hover {
    /*鼠标移入图片放大*/
    transform: scale(1.1);
    -webkit-transform: scale(1.1); /*Safari 和 Chrome*/
    -moz-transform: scale(1.1); /*Firefox*/
    -ms-transform: scale(1.1); /*IE9*/
    -o-transform: scale(1.1); /*Opera*/
}

.article-detail-box {
    float: left;
    height: 60px;
    width: 390px;
    margin-top: 5px;
    margin-left: 20px;
    line-height: 30px;
    font-size: 15px;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    -o-text-overflow: ellipsis; /* 支持 Opera */
    text-overflow: ellipsis; /* 支持 IE */
    overflow: hidden;
}


.article-tail-box {
    float: left;
    height: 30px;
    width: 400px;
    margin-top: 2px;
    margin-left: 20px;
    line-height: 30px;
}

.article-tail-box i {
    width: 20px;
    height: 20px;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    display: inline-block;
    margin: 5px 3px;
}

.article-tail-box .comment-number {
    height: 100%;
    line-height: 30px;
}

.article-tail-box .read-number {
    height: 100%;
    line-height: 30px;
    margin-right: 5px;
}

.article-date {
    float: right;
    height: 100%;
    font-size: 16px;
    margin-right: 10px;
}
/* ... */

